--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,28 +1,27 @@
+.page {
+  margin: 0;
+  height: 100%;
+  min-height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
 .app {
-  text-align: center;
+  flex: 1;
+  display: flex;
+  overflow: auto;
 }
 
-.logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.nav {
+  flex: 0 0 256px;
+  order: 0;
+  overflow: auto;
+  background: #FAF9F8;
 }
 
-.header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.title {
-  font-size: 1.5em;
-}
-
-.intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.content {
+  flex: 1;
+  order: 1;
+  overflow: auto;
 }
