--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,21 @@
+html,
+body,
+:global(#root) {
+  height: 100%;
+  min-height: 100%;
+}
+
 body {
+  height: 100%;
+  min-height: 100%;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
 }
