--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,12 +5,17 @@ body,
   min-height: 100%;
 }
 
+html {
+  font-size: 10px;
+}
+
 body {
   height: 100%;
   min-height: 100%;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: rgb(250, 250, 250);
 }
 
 h1,
