Figure out the problem when if someone adds a video to the beginning of a timeline after it's been established.

--- a/client/src/views/coord-player/timeline/angle/coordinate/coordinate.css
+++ b/client/src/views/coord-player/timeline/angle/coordinate/coordinate.css
@@ -1,7 +1,6 @@
 .coordinate {
   background-color: white;
-  margin: 5px .5px;
-  border: 1px solid gray;
-  height: 15px;
+  margin: 5px 0;
+  height: 30px;
   position: absolute;
 }
