--- a/client/src/views/coord-player/timeline/angle/angle.css
+++ b/client/src/views/coord-player/timeline/angle/angle.css
@@ -1,16 +1,16 @@
 .angle {
-  height: 40px;
+  height: 50px;
   border-bottom: 1px solid lightgray;
-  /* display: flex; */
-  /* align-items: center; */
+  position: relative;
 }
 
 .coordinates {
-  /* display: flex;
-  flex-direction: row; */
   position: relative;
 }
 
 .author {
-  /* align-self: flex-end; */
+  position: absolute;
+  left: 2px;
+  bottom: 2px;
+  color: lightgray;
 }
