--- a/client/src/components/coord-player/timeline/progress-bar/progress-bar.css
+++ b/client/src/components/coord-player/timeline/progress-bar/progress-bar.css
@@ -1,22 +1,30 @@
-.progressBar {
-  height: 3px;
-  width: 100%;
-  background-color: rgb(200, 200, 200);
+.progressContainer {
+  flex: 1;
+  flex-direction: row;
   position: relative;
-  display: flex;
-  align-items: center;
+  background-color: rgba(0, 0, 0, .5);
+}
+
+.progressBar {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(255, 99, 71, .8);
 }
 
 .slider {
   position: absolute;
-  width: 6px;
-  height: 15px;
-  background-color: red;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  border-left: 4px solid rgba(255, 255, 255, .8);;
+  margin-right: 4px;
 }
 
 .indicator {
-  margin-left: 2px;
-  margin-top: 15px;
-  height: 100px;
-  border-left: dotted var(--gray) 2px;
+  margin-left: -3px;
+  border-left: dotted rgba(0, 0, 0, .5) 2px;
 }
