Remove angles - make coordinates directly tied to coords. Any future angle type relation will be handled by tags on the coordinates and sorted visually.

--- a/client/src/components/coord-player/timeline/coordinate/coordinate.css
+++ b/client/src/components/coord-player/timeline/coordinate/coordinate.css
@@ -1,8 +1,12 @@
 .coordinate {
   background-color: white;
-  margin: 5px 0;
+  margin-top: 5px;
   height: 30px;
-  position: absolute;
+  position: relative;
+}
+
+.coordinate:last-of-type {
+  margin-bottom: 5px;
 }
 
 .jump {
