--- a/client/src/components/coord-player/timeline/progress-bar/progress-bar.css
+++ b/client/src/components/coord-player/timeline/progress-bar/progress-bar.css
@@ -2,36 +2,47 @@
   flex: 1;
   flex-direction: row;
   background-color: rgba(0, 0, 0, .5);
-  height: 10px;
 }
 
 .progressBar {
   position: relative;
-}
-
-.elapsed,
-.intent,
-.handle,
-.seek {
   height: 10px;
-  position: absolute;
 }
 
 .elapsed {
-  background-color: rgba(255, 99, 71, .8);
+  background: rgba(240, 74, 42, 0.8);
+  height: 100%;
 }
 
-.slider {
+.handle {
   position: absolute;
-  left: 0;
-  right: 0;
+  width: 14px;
+  height: 14px;
+  background: rgb(255, 74, 42);
+  border-radius: 100%;
+  transform: scale(0);
+  transition: transform 0.2s;
   top: 0;
-  bottom: 0;
-  border-left: 4px solid rgba(255, 255, 255, .8);
-  margin-right: 4px;
+  margin: -2px 0 0 -7px;
 }
 
-.indicator {
-  margin-left: -3px;
-  border-left: dotted rgba(0, 0, 0, .5) 2px;
+.progressBar:hover .handle {
+  transform: scale(1);
+}
+
+.progressBar:hover .intent {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.seek {
+  position: absolute;
+  cursor: pointer;
+  top: -6px;
+  right: 0;
+  bottom: -6px;
+  left: 0;
 }
