--- a/client/src/components/coord-player/timeline/coordinate/coordinate.css
+++ b/client/src/components/coord-player/timeline/coordinate/coordinate.css
@@ -59,3 +59,11 @@
   background-color: red;
   position: absolute;
 }
+
+.indicator {
+  display: none;
+  height: 100%;
+  width: 2px;
+  background-color: rgba(255, 74, 42, .75);
+  position: absolute;
+}
