--- a/client/src/components/coord-player/timeline/coordinate/coordinate.css
+++ b/client/src/components/coord-player/timeline/coordinate/coordinate.css
@@ -67,3 +67,12 @@
   background-color: rgba(255, 74, 42, .75);
   position: absolute;
 }
+
+.coordinate.nowPlaying > .indicator {
+  display: block
+}
+
+.coordinate.canClick:hover > .indicator {
+  display: block;
+  background-color: rgba(255, 255, 255, .6);
+}
